--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/naveedn/vayder#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "dirty-chai": "^2.0.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
